--- a/projects/simples/makefile
+++ b/projects/simples/makefile
@@ -1,6 +1,6 @@
-simples: lexico.l sintatico.y;
+simples: utils.c lexico.l sintatico.y;
 		flex -o lexico.c lexico.l;\
-		bison -v -d sintatico.y -o sintatico.c;\
+		bison -o sintatico.c sintatico.y -v -d;\
 		gcc sintatico.c -o simples;
 
 limpa: ;
